# mydotfiles

./: .bash_profile  .bashrc  .gitignore  .profile
.bashrc.d/: wal.sh
.cache/wal/: colors  colors-kitty.conf  colors-konsole.colorscheme  colors-oomox  colors-putty.reg  colors-rofi-dark.rasi  colors-rofi-light.rasi  colors-speedcrunch.json  colors-sway  colors-tty.sh  colors-wal-dmenu.h  colors-wal-dwm.h  colors-wal-st.h  colors-wal-tabbed.h  colors-wal.vim  colors-waybar.css  colors.Xresources  colors.css  colors.hs  colors.json  colors.scss  colors.sh  colors.yml  hyprpaper.conf  hyprtoolkit.conf  sequences  wal
.config/hypr/: .hyprlock.conf.swp  animations.conf  autostart.conf  envs.conf  hyprbar.conf  hypridle.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf  hyprtoolkit.conf  input.conf  (+8 more)
.fonts/: More Info.txt  README.txt
.icons/: ReadMe.txt
.themes/: FlatColor
.vim/: .netrwhist  color.old.vim  colors-wal.vim  colors.vim  keybinds.vim  lsp.vim  options.vim  plugins.vim  vimrc
projects/hyprwal/: meson.build
projects/hyprwal/builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  hyprwal
projects/hyprwal/builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-compilers.json  intro-dependencies.json  intro-install_plan.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
projects/hyprwal/builddir/meson-logs/: meson-log.txt
projects/hyprwal/builddir/meson-private/: coredata.dat.prev
projects/hyprwal/src/: app.cpp  app.hpp  fs.cpp  fs.hpp  main.cpp
(+49 files in other folders)
